--- a/clash-emby.ini
+++ b/clash-emby.ini
@@ -1,73 +1,64 @@
-; =============================================
-; 策略组（Proxy Groups）
-; =============================================
-
 ; 主选择组
-custom_proxy_group=🚀 默认代理`select`[]🌍 国外媒体应用`[]🤖 国外AI`[]🎵 TikTok-地区`[]🎬 Emby媒体`[]♻️ 自动选择`[]🌐 全部节点（手动）`[]直连
+custom_proxy_group=🚀 默认代理`select`🌍 国外媒体应用`🤖 国外AI`🎵 TikTok-地区`🎬 Emby媒体`♻️ 自动选择`🌐 全部节点（手动）`直连
 
 ; 国外媒体大类
-custom_proxy_group=🌍 国外媒体应用`select`[]♻️ 香港自动`[]♻️ 日本自动`[]♻️ 狮城自动`[]♻️ 美国自动`[]🌐 全部节点（手动）
+custom_proxy_group=🌍 国外媒体应用`select`♻️ 香港自动`♻️ 日本自动`♻️ 狮城自动`♻️ 美国自动`🌐 全部节点（手动）
 
 ; AI 专用
-custom_proxy_group=🤖 国外AI`select`[]♻️ 美国自动`[]♻️ 日本自动`[]♻️ 狮城自动`[]🌐 全部节点（手动）
+custom_proxy_group=🤖 国外AI`select`♻️ 美国自动`♻️ 日本自动`♻️ 狮城自动`🌐 全部节点（手动）
 
 ; TikTok 地区选择（日本/新加坡优先）
-custom_proxy_group=🎵 TikTok-地区`select`[]♻️ 日本自动`[]♻️ 狮城自动`[]♻️ 美国自动`[]♻️ 香港自动`[]🌐 全部节点（手动）
+custom_proxy_group=🎵 TikTok-地区`select`♻️ 日本自动`♻️ 狮城自动`♻️ 美国自动`♻️ 香港自动`🌐 全部节点（手动）
 
 ; Emby 媒体专用组
-custom_proxy_group=🎬 Emby媒体`select`[]⚖️ Emby负载均衡(去日美+去家宽)`[]♻️ Emby自动(去日美+去家宽)`[]♻️ 香港自动`[]♻️ 狮城自动`[]♻️ 台湾自动
+custom_proxy_group=🎬 Emby媒体`select`⚖️ Emby负载均衡(去日美+去家宽)`♻️ Emby自动(去日美+去家宽)`♻️ 香港自动`♻️ 狮城自动`♻️ 台湾自动
 
-; =============================================
-; 节点自动选择组（url-test）
-; =============================================
-
-; Emby 自动 - 排除日美 + 家宽/住宅节点
-custom_proxy_group=♻️ Emby自动(去日美+去家宽)`url-test`(?i)(港|hk|hong|新加坡|sg|singapore|台|tw|taiwan)(?!.*(日|jp|japan|美|us|america|宽带|broadband|home|isp|家庭|家宽|动态|住宅|residential|dynamic))`http://www.gstatic.com/generate_204`300,180
-
+; Emby 自动选择 - 排除日美 + 家宽/住宅节点
+custom_proxy_group=♻️ Emby自动(去日美+去家宽)`url-test`(?i)(港|hk|hong|新加坡|sg|singapore|台|tw|taiwan)(?!.*(日|jp|japan|美|us|america|宽带|broadband|home|isp|家庭|家宽|动态|住宅|residential|dynamic))`http://www.gstatic.com/generate_204`180,5,100
+custom_proxy_group=IPv6-自动`url-test`(ipv6|IPV6|IPv6)`http://www.gstatic.com/generate_204`180,5,100
 ; Emby 负载均衡 - 同上过滤
-custom_proxy_group=⚖️ Emby负载均衡(去日美+去家宽)`load-balance`(?i)(港|hk|hong|新加坡|sg|singapore|台|tw|taiwan)(?!.*(日|jp|japan|美|us|america|宽带|broadband|home|isp|家庭|家宽|动态|住宅|residential|dynamic))`consistent-hashing`http://www.gstatic.com/generate_204`300,180
-
-; 区域自动选择组
-custom_proxy_group=♻️ 香港自动`url-test`(?i)港|hk|hong`http://www.gstatic.com/generate_204`180,60
-custom_proxy_group=♻️ 日本自动`url-test`(?i)日|jp|japan`http://www.gstatic.com/generate_204`180,60
-custom_proxy_group=♻️ 狮城自动`url-test`(?i)新加坡|sg|singapore`http://www.gstatic.com/generate_204`180,60
-custom_proxy_group=♻️ 美国自动`url-test`(?i)美|us|america`http://www.gstatic.com/generate_204`180,60
-custom_proxy_group=♻️ 台湾自动`url-test`(?i)台|tw|taiwan`http://www.gstatic.com/generate_204`180,60
+custom_proxy_group=⚖️ Emby负载均衡(去日美+去家宽)`load-balance`(?i)(港|hk|hong|新加坡|sg|singapore|台|tw|taiwan)(?!.*(日|jp|japan|美|us|america|宽带|broadband|home|isp|家庭|家宽|动态|住宅|residential|dynamic))`consistent-hashing`http://www.gstatic.com/generate_204`180,5,100
+custom_proxy_group=IPv6-自动`url-test`(ipv6|IPV6|IPv6)`http://www.gstatic.com/generate_204`180,5,100
+; 区域自动选择组（url-test 类型）
+custom_proxy_group=♻️ 香港自动`url-test`(?i)港|hk|hong`https://cp.cloudflare.com/generate_204`300,20
+custom_proxy_group=♻️ 日本自动`url-test`(?i)日|jp|japan`https://cp.cloudflare.com/generate_204`300,20
+custom_proxy_group=♻️ 狮城自动`url-test`(?i)新加坡|sg|singapore`https://cp.cloudflare.com/generate_204`300,20
+custom_proxy_group=♻️ 美国自动`url-test`(?i)美|us|america`https://cp.cloudflare.com/generate_204`300,20
+custom_proxy_group=♻️ 台湾自动`url-test`(?i)台|tw|taiwan`https://cp.cloudflare.com/generate_204`300,20
 
 ; 全局自动选择（所有节点）
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`180,60
+custom_proxy_group=♻️ 自动选择`url-test`.*`https://cp.cloudflare.com/generate_204`300,20
 
 ; 手动全部节点
 custom_proxy_group=🌐 全部节点（手动）`select`.*
 
+
 ; =============================================
-; 规则设置（分流规则 - 顺序完全不变）
+; 规则设置 (ruleset) - 对应你 YAML 的 rule-providers 和 rules 顺序
 ; =============================================
 
 ; 国内直连优先
-ruleset=GEOIP,CN,[]直连
-ruleset=直连,[]cn_domain,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/cn.yaml
+ruleset=GEOIP,CN,直连
+ruleset=直连,cn_domain,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/cn.yaml
 
 ; 特殊媒体分流（顺序重要，先匹配特殊再兜底）
-ruleset=🎬 Emby媒体,[]EMBY_domain,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Emby/Emby.list
-ruleset=🤖 国外AI,[]ai,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/openai.yaml
-ruleset=🎵 TikTok-地区,[]tiktok_domain,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/tiktok.yaml
-ruleset=🌍 国外媒体应用,[]netflix_domain,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/netflix.yaml
-ruleset=🌍 国外媒体应用,[]youtube_domain,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/youtube.yaml
+ruleset=🎬 Emby媒体,EMBY_domain,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Emby/Emby.list
+ruleset=🤖 国外AI,ai,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/openai.yaml
+ruleset=🎵 TikTok-地区,tiktok_domain,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/tiktok.yaml
+ruleset=🌍 国外媒体应用,netflix_domain,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/netflix.yaml
+ruleset=🌍 国外媒体应用,youtube_domain,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/youtube.yaml
 
 ; 国外兜底
-ruleset=🚀 默认代理,[]geolocation-!cn,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/geolocation-!cn.yaml
+ruleset=🚀 默认代理,geolocation-!cn,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/geolocation-!cn.yaml
 
-; 最终兜底
-ruleset=FINAL,[]🚀 默认代理
+; 最终兜底（建议保留）
+ruleset=FINAL,🚀 默认代理
+
 
 ; =============================================
-; 其他常用设置
+; 其他常用设置（可选，根据需要启用/修改）
 ; =============================================
 
-clash_new_name=true
-rule_merge_strategy=append
-sort=true
-emoji=true
+; 强制启用 Clash Meta 特性（推荐）
 enable_rule_generator=true
 overwrite_original_rules=true
