--- a/clash-emby.ini
+++ b/clash-emby.ini
@@ -20,14 +20,13 @@ custom_proxy_group=IPv6-自动`url-test`(ipv6|IPV6|IPv6)`http://www.gstatic.com/
 custom_proxy_group=⚖️ Emby负载均衡(去日美+去家宽)`load-balance`(?i)(港|hk|hong|新加坡|sg|singapore|台|tw|taiwan)(?!.*(日|jp|japan|美|us|america|宽带|broadband|home|isp|家庭|家宽|动态|住宅|residential|dynamic))`consistent-hashing`http://www.gstatic.com/generate_204`180,5,100
 custom_proxy_group=IPv6-自动`url-test`(ipv6|IPV6|IPv6)`http://www.gstatic.com/generate_204`180,5,100
 ; 区域自动选择组（url-test 类型）
-custom_proxy_group=♻️ 香港自动`url-test`(?i)港|hk|hong`https://cp.cloudflare.com/generate_204`300,20
-custom_proxy_group=♻️ 日本自动`url-test`(?i)日|jp|japan`https://cp.cloudflare.com/generate_204`300,20
-custom_proxy_group=♻️ 狮城自动`url-test`(?i)新加坡|sg|singapore`https://cp.cloudflare.com/generate_204`300,20
-custom_proxy_group=♻️ 美国自动`url-test`(?i)美|us|america`https://cp.cloudflare.com/generate_204`300,20
-custom_proxy_group=♻️ 台湾自动`url-test`(?i)台|tw|taiwan`https://cp.cloudflare.com/generate_204`300,20
-
+custom_proxy_group=♻️ 香港自动`url-test`(?i)港|hk|hong`http://www.gstatic.com/generate_204`180,5,100
+custom_proxy_group=♻️ 日本自动`url-test`(?i)日|jp|japan`http://www.gstatic.com/generate_204`180,5,100
+custom_proxy_group=♻️ 狮城自动`url-test`(?i)新加坡|sg|singapore`http://www.gstatic.com/generate_204`180,5,100
+custom_proxy_group=♻️ 美国自动`url-test`(?i)美|us|america`http://www.gstatic.com/generate_204`180,5,100
+custom_proxy_group=♻️ 台湾自动`url-test`(?i)台|tw|taiwan`http://www.gstatic.com/generate_204`180,5,100
 ; 全局自动选择（所有节点）
-custom_proxy_group=♻️ 自动选择`url-test`.*`https://cp.cloudflare.com/generate_204`300,20
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`180,5,100
 
 ; 手动全部节点
 custom_proxy_group=🌐 全部节点（手动）`select`.*
@@ -62,3 +61,4 @@ ruleset=FINAL,🚀 默认代理
 ; 强制启用 Clash Meta 特性（推荐）
 enable_rule_generator=true
 overwrite_original_rules=true
+
