--- a/clash-emby.ini
+++ b/clash-emby.ini
@@ -20,11 +20,11 @@ custom_proxy_group=IPv6-自动`url-test`(ipv6|IPV6|IPv6)`http://www.gstatic.com/
 custom_proxy_group=⚖️ Emby负载均衡(去日美+去家宽)`load-balance`(?i)(港|hk|hong|新加坡|sg|singapore|台|tw|taiwan)(?!.*(日|jp|japan|美|us|america|宽带|broadband|home|isp|家庭|家宽|动态|住宅|residential|dynamic))`consistent-hashing`http://www.gstatic.com/generate_204`180,5,100
 custom_proxy_group=IPv6-自动`url-test`(ipv6|IPV6|IPv6)`http://www.gstatic.com/generate_204`180,5,100
 ; 区域自动选择组（url-test 类型）
-custom_proxy_group=♻️ 香港自动`url-test`(?i)港|hk|hong`http://www.gstatic.com/generate_204`180,5,100
-custom_proxy_group=♻️ 日本自动`url-test`(?i)日|jp|japan`http://www.gstatic.com/generate_204`180,5,100
-custom_proxy_group=♻️ 狮城自动`url-test`(?i)新加坡|sg|singapore`http://www.gstatic.com/generate_204`180,5,100
-custom_proxy_group=♻️ 美国自动`url-test`(?i)美|us|america`http://www.gstatic.com/generate_204`180,5,100
-custom_proxy_group=♻️ 台湾自动`url-test`(?i)台|tw|taiwan`http://www.gstatic.com/generate_204`180,5,100
+custom_proxy_group=♻️  香港-自动`url-test`(广港|香港|HK|Hong Kong|🇭🇰|HongKong)`http://www.gstatic.com/generate_204`180,5,100
+custom_proxy_group=♻️ 日本-自动`url-test`(广日|日本|JP|川日|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|Japan)`http://www.gstatic.com/generate_204`180,5,100
+custom_proxy_group=♻️ 新加坡-自动`url-test`(广新|新加坡|SG|坡|狮城|🇸🇬|Singapore)`http://www.gstatic.com/generate_204`180,5,100
+custom_proxy_group=♻️ 美国-自动`url-test`(广美|美|US|纽约|波特兰|达拉斯|俄勒|凤凰城|费利蒙|硅谷|拉斯|洛杉|圣何塞|圣克拉|西雅|芝加|🇺🇸|United States)`http://www.gstatic.com/generate_204`180,5,100
+custom_proxy_group=♻️ 台湾-自动`url-test`(广台|台湾|台灣|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan)`http://www.gstatic.com/generate_204`180,5,100
 ; 全局自动选择（所有节点）
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`180,5,100
 
@@ -61,4 +61,5 @@ ruleset=FINAL,🚀 默认代理
 ; 强制启用 Clash Meta 特性（推荐）
 enable_rule_generator=true
 overwrite_original_rules=true
+
 
