--- a/clash-emby.ini
+++ b/clash-emby.ini
@@ -1,65 +1,43 @@
-; 主选择组
-custom_proxy_group=🚀 默认代理`select`🌍 国外媒体应用`🤖 国外AI`🎵 TikTok-地区`🎬 Emby媒体`♻️ 自动选择`🌐 全部节点（手动）`直连
+;1、域名组
+ruleset=✨ AI1,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/AI.list
+ruleset=✨ AI2,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/AI2.list
+ruleset=👩‍👧‍👦 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
+ruleset=🎥 流媒体,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/YouTube.list
+ruleset=🎥 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/HBO/HBO.list
+ruleset=🎥 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
+ruleset=🎥 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
+ruleset=🎥 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
+ruleset=🎥 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
+ruleset=🎬 Emby媒体,https://raw.githubusercontent.com/JBl9527/ios_rule_script/refs/heads/master/rule/Clash/Emby/Emby.list
+;ruleset=➡️ 国内,https:///raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/Direct.list
+ruleset=🌍 国外,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/Check.list
+ruleset=🌍 国外,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/Proxy.list
+ruleset=🌍 国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
+ruleset=➡️ 国内,[]FINAL
 
-; 国外媒体大类
-custom_proxy_group=🌍 国外媒体应用`select`♻️ 香港自动`♻️ 日本自动`♻️ 狮城自动`♻️ 美国自动`🌐 全部节点（手动）
+;2、策略组（域名组-节点组）
+custom_proxy_group=✨ AI1`select`[]DIRECT`[]所有-手动`[]所有-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]IPv6-自动`[]REJECT
+custom_proxy_group=✨ AI2`select`[]DIRECT`[]所有-手动`[]所有-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]IPv6-自动`[]REJECT
+custom_proxy_group=👩‍👧‍👦 TikTok`select`[]DIRECT`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]IPv6-自动`[]REJECT
+custom_proxy_group=🎥 流媒体`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]IPv6-自动`[]REJECT
+custom_proxy_group=🎬 Emby媒体 `select`[]DIRECT`[]所有-手动`[]香港-自动`[]台湾-自动`[]新加坡-自动`[]韩国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🌍 国外`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]IPv6-自动`[]REJECT
+custom_proxy_group=➡️ 国内`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]IPv6-自动`[]REJECT
 
-; AI 专用
-custom_proxy_group=🤖 国外AI`select`♻️ 美国自动`♻️ 日本自动`♻️ 狮城自动`🌐 全部节点（手动）
-
-; TikTok 地区选择（日本/新加坡优先）
-custom_proxy_group=🎵 TikTok-地区`select`♻️ 日本自动`♻️ 狮城自动`♻️ 美国自动`♻️ 香港自动`🌐 全部节点（手动）
-
-; Emby 媒体专用组
-custom_proxy_group=🎬 Emby媒体`select`⚖️ Emby负载均衡(去日美+去家宽)`♻️ Emby自动(去日美+去家宽)`♻️ 香港自动`♻️ 狮城自动`♻️ 台湾自动
-
-; Emby 自动选择 - 排除日美 + 家宽/住宅节点
-custom_proxy_group=♻️ Emby自动(去日美+去家宽)`url-test`(?i)(港|hk|hong|新加坡|sg|singapore|台|tw|taiwan)(?!.*(日|jp|japan|美|us|america|宽带|broadband|home|isp|家庭|家宽|动态|住宅|residential|dynamic))`http://www.gstatic.com/generate_204`180,5,100
+;3、节点组
+custom_proxy_group=所有-手动`select`.*
+custom_proxy_group=所有-自动`url-test`.*`http://www.gstatic.com/generate_204`180,5,100
+;custom_proxy_group=港台日新韩-自动`url-test`(广港|广台|广日|广新|广韩|广美|香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan|日本|JP|川日|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|Japan|新加坡|SG|坡|狮城|🇸🇬|Singapore|韩国|KR|首尔|春川|🇰🇷|Korea)`http://www.gstatic.com/generate_204`180,5,100
+;custom_proxy_group=台日新韩-自动`url-test`(广台|广日|广新|广韩|广美|台湾|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan|日本|JP|川日|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|Japan|新加坡|SG|坡|狮城|🇸🇬|Singapore|韩国|KR|首尔|春川|🇰🇷|Korea)`http://www.gstatic.com/generate_204`180,5,100
+custom_proxy_group=香港-自动`url-test`(广港|香港|HK|Hong Kong|🇭🇰|HongKong)`http://www.gstatic.com/generate_204`180,5,100
+custom_proxy_group=台湾-自动`url-test`(广台|台湾|台灣|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan)`http://www.gstatic.com/generate_204`180,5,100
+custom_proxy_group=日本-自动`url-test`(广日|日本|JP|川日|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|Japan)`http://www.gstatic.com/generate_204`180,5,100
+custom_proxy_group=新加坡-自动`url-test`(广新|新加坡|SG|坡|狮城|🇸🇬|Singapore)`http://www.gstatic.com/generate_204`180,5,100
+custom_proxy_group=韩国-自动`url-test`(广韩|韩国|韓國|KR|首尔|春川|🇰🇷|Korea)`http://www.gstatic.com/generate_204`180,5,100
+custom_proxy_group=美国-自动`url-test`(广美|美|US|纽约|波特兰|达拉斯|俄勒|凤凰城|费利蒙|硅谷|拉斯|洛杉|圣何塞|圣克拉|西雅|芝加|🇺🇸|United States)`http://www.gstatic.com/generate_204`180,5,100
+custom_proxy_group=其他-自动`url-test`(波|柬|尼|也|克|比|尔|立|冰|秘|耳|利|埃|希|孟|芬|愛|澳|英|德|南|意|法|拿|墨|印|越|俄|瑞|智|荷|比|巴|沙|班|泰|德|烏|以|Australia|Konghwaguk)`http://www.gstatic.com/generate_204`180,5,100
 custom_proxy_group=IPv6-自动`url-test`(ipv6|IPV6|IPv6)`http://www.gstatic.com/generate_204`180,5,100
-; Emby 负载均衡 - 同上过滤
-custom_proxy_group=⚖️ Emby负载均衡(去日美+去家宽)`load-balance`(?i)(港|hk|hong|新加坡|sg|singapore|台|tw|taiwan)(?!.*(日|jp|japan|美|us|america|宽带|broadband|home|isp|家庭|家宽|动态|住宅|residential|dynamic))`consistent-hashing`http://www.gstatic.com/generate_204`180,5,100
-custom_proxy_group=IPv6-自动`url-test`(ipv6|IPV6|IPv6)`http://www.gstatic.com/generate_204`180,5,100
-; 区域自动选择组（url-test 类型）
-custom_proxy_group=♻️  香港-自动`url-test`(广港|香港|HK|Hong Kong|🇭🇰|HongKong)`http://www.gstatic.com/generate_204`180,5,100
-custom_proxy_group=♻️ 日本-自动`url-test`(广日|日本|JP|川日|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|Japan)`http://www.gstatic.com/generate_204`180,5,100
-custom_proxy_group=♻️ 新加坡-自动`url-test`(广新|新加坡|SG|坡|狮城|🇸🇬|Singapore)`http://www.gstatic.com/generate_204`180,5,100
-custom_proxy_group=♻️ 美国-自动`url-test`(广美|美|US|纽约|波特兰|达拉斯|俄勒|凤凰城|费利蒙|硅谷|拉斯|洛杉|圣何塞|圣克拉|西雅|芝加|🇺🇸|United States)`http://www.gstatic.com/generate_204`180,5,100
-custom_proxy_group=♻️ 台湾-自动`url-test`(广台|台湾|台灣|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan)`http://www.gstatic.com/generate_204`180,5,100
-; 全局自动选择（所有节点）
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`180,5,100
 
-; 手动全部节点
-custom_proxy_group=🌐 全部节点（手动）`select`.*
-
-
-; =============================================
-; 规则设置 (ruleset) - 对应你 YAML 的 rule-providers 和 rules 顺序
-; =============================================
-
-; 国内直连优先
-ruleset=GEOIP,CN,直连
-ruleset=直连,cn_domain,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/cn.yaml
-
-; 特殊媒体分流（顺序重要，先匹配特殊再兜底）
-ruleset=🎬 Emby媒体,EMBY_domain,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Emby/Emby.list
-ruleset=🤖 国外AI,ai,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/openai.yaml
-ruleset=🎵 TikTok-地区,tiktok_domain,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/tiktok.yaml
-ruleset=🌍 国外媒体应用,netflix_domain,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/netflix.yaml
-ruleset=🌍 国外媒体应用,youtube_domain,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/youtube.yaml
-
-; 国外兜底
-ruleset=🚀 默认代理,geolocation-!cn,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/geolocation-!cn.yaml
-
-; 最终兜底（建议保留）
-ruleset=FINAL,🚀 默认代理
-
-
-; =============================================
-; 其他常用设置（可选，根据需要启用/修改）
-; =============================================
-
-; 强制启用 Clash Meta 特性（推荐）
+;4、启用规则集
 enable_rule_generator=true
 overwrite_original_rules=true
-
-
